# DocMind

./: .env.example  .gitignore  README.md  compare_extractors.py  explore_pdf.py  pyproject.toml  run_corpus_test.py  run_demo_dry_run.py  run_pipeline.py  run_query.py
.refinery/: checkpoints.sqlite  facts.db
.refinery/_demo_offline/: facts.db
.refinery/chroma/: chroma.sqlite3
.refinery/chunks/: 212dc42370e2.jsonl  4dcf8792cc25.jsonl  7b8976e32efc.jsonl  b9807d59e9ba.jsonl
.refinery/extractions/: 212dc42370e2.md  45bc9cf4ff5c.md  4a67ebdf892c.md  4dcf8792cc25.md  62213e3af42b.md  7b8976e32efc.md  b9807d59e9ba.md  cafb11ca016f.md
.refinery/pageindex/: 212dc42370e2.json  4dcf8792cc25.json  b9807d59e9ba.json  demo_offline.json  p4doc.json  p4emb.json
.refinery/profiles/: .gitkeep  212dc42370e2.json  45bc9cf4ff5c.json  4a67ebdf892c.json  4dcf8792cc25.json  62213e3af42b.json  7b8976e32efc.json  7e20fe6fec83.json  b9807d59e9ba.json  cafb11ca016f.json
document_science_primer/: README.md  __init__.py  compare_extractors.py  explore_pdf.py
rubric/: .gitkeep  models.yaml
src/: __init__.py  config.py
src/agents/: .gitkeep  __init__.py  audit_agent.py  audit_prompts.py  domain.py  intent_router.py  json_util.py  memory.py  query_agent.py  (+3 more)
tests/: .gitkeep  test_audit_agent.py  test_chunking.py  test_demo_dry_run.py  test_extraction.py  test_facts.py  test_intent_router.py  test_langsmith.py  test_llm.py  test_memory.py  test_page_map.py  test_pageindex.py  test_phase4_cli.py  test_provenance_assemble.py  test_provenance_models.py  test_query_agent.py  test_query_tools.py  test_retrieval.py  test_triage_integration.py  test_triage_units.py
(+59 files in other folders)
