[project]
name = "docmind"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.107.0",
    "easyocr>=1.7.2",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# Put the project root on sys.path so tests can `import src...` cleanly.
pythonpath = ["."]
testpaths = ["tests"]
